# pdf_parser

./: .gitignore  Cargo.toml  README.md  USAGE.md  readme.md  sample.json  seleccion-escritos-el-bab.json  seleccion-escritos-el-bab_processed.json  test_input.json  test_input_processed.json
flatten_processed/: 26-oraciones-de-Abdul-Baha_traduccion-2021_processed.json  Contestacion-a-unas-preguntas_traduccion-actualizada-2023_processed.json  Dias-de-conmemoracion_Bahaullah_processed.json  El-Kitab-i-Aqdas_processed.json  Las-Palabras-Ocultas_traduccion-actualizada-2022_processed.json  Oraciones-bahais_traduccion-actualizada-2020_processed.json  Oraciones-y-Tablas-bahais-para-ninos_processed.json  Pasajes-de-los-Escritos-de-Bahaullah_traduccion-actualizada-2020_processed.json  Voluntad-y-Testamento-de-Abdul-Baha_traduccion-actualizada-2021_processed.json  desenvolvimiento-civilizacion-mundial_processed.json  dios-pasa_processed.json  el_tabernaculo_de_la_unidad_processed.json  gemas_misterios_divinos_processed.json  kitab-i-iqan_processed.json  la-sabiduria-de-abdul-baha_processed.json  llamado-a-las-naciones_processed.json  oraciones-y-meditaciones_processed.json  seleccion-escritos-el-bab_processed.json  siete-valles-y-cuatro-valles_processed.json  tablas-de-bahaullah_processed.json
json_el_tabernaculo_de_la_unidad/: el_tabernaculo_de_la_unidad_processed.json
src/: main.rs
