[package]
name = "pdf_parser"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
walkdir = "2.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "pdf_parser"
path = "src/main.rs"
